<resources>
    <string name="app_name">引導日記</string>
    <string name="title_diary">引導日記</string>
    <string name="title_handwritediary">手寫日記</string>
    <string name="title_OCR">OCR</string>
    <string name="title_home">歷史紀錄</string>
    <string name="title_dashboard">統計圖表</string>
    <string name="title_notifications">日記</string>
    <string name="title_friend">社群</string>
    <string name="title_maybelike">推薦</string>
    <string name="title_activity_login">登入</string>
    <string name="prompt_email">帳號</string>
    <string name="prompt_password">密碼</string>
    <string name="action_sign_in">登入</string>
    <string name="action_sign_in_short">登入</string>
    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>


</resources>
